3.Semantic.Analysis/test/semanal/error/error4_1_2_3.mod
module re_dec;

procedure f(a : integer; a : boolean);
begin
end f;

begin

end re_dec.
